# squber

./: .gitignore  CLAUDE.md  go.sh  manifest.json  proxy.py  pyproject.toml  run.sh
app/: .gitignore  FUTURES.md  nginx.conf  pyproject.toml  show_data.py  test_server.py
app/src/squber/: database.py  futures_schema.py  http_server.py  maritime_seed_data.py  seed_data.py
backend/: .gitignore  package-lock.json  package.json
backend/src/: conversationManager.js  index.js  mcpManager.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ConnectionStatus.tsx  MessageBubble.tsx  ServerConfig.tsx  SimpleChatInterface.tsx  ToolSelector.tsx
frontend/src/lib/: mcpClient.ts  websocketClient.ts
frontend/src/types/: mcp.ts
src/squber/: __init__.py  auth.py  database.py  futures_seed_data.py  http_server.py  maritime_schema.py  sse_server.py
